<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgCalc"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    tools:context="com.oletob.rpncalc.ui.main.MainActivity">

    <TextView
        android:id="@+id/text_view_panel"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="bottom|end"
        android:background="@android:color/white"
        android:gravity="bottom|end"
        android:padding="5dp"
        android:text="@string/zero"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:weightSum="5"
        android:layout_below="@+id/text_view_panel">

        <!-- Column 1 -->
        <LinearLayout style="@style/layoutButtonGroup">
            <Button
                android:id="@+id/button_clear"
                style="@style/btnNumbers"
                android:text="@string/clear_btn" />

            <Button
                android:id="@+id/button_delete"
                style="@style/btnNumbers"
                android:text="@string/delete" />

            <Button
                android:id="@+id/button_enter"
                style="@style/btnNumbers"
                android:layout_height="156dp"
                android:background="@color/buttonBgControls"
                android:layout_weight="2"
                android:text="@string/enter" />
        </LinearLayout>

        <!-- Column 2 -->
        <LinearLayout style="@style/layoutButtonGroup">

            <Button
                android:id="@+id/button_7"
                style="@style/btnNumbers"
                android:text="@string/seven"/>

            <Button
                android:id="@+id/button_4"
                style="@style/btnNumbers"
                android:text="@string/four"/>

            <Button
                android:id="@+id/button_1"
                style="@style/btnNumbers"
                android:text="@string/one"/>

            <Button
                android:id="@+id/button_0"
                style="@style/btnNumbers"
                android:text="@string/zero"/>

        </LinearLayout>

        <!-- Column 3 -->
        <LinearLayout style="@style/layoutButtonGroup">
            <Button
                android:id="@+id/button_8"
                style="@style/btnNumbers"
                android:text="@string/eight" />

            <Button
                android:id="@+id/button_5"
                style="@style/btnNumbers"
                android:text="@string/five" />

            <Button
                android:id="@+id/button_2"
                style="@style/btnNumbers"
                android:text="@string/two" />

            <Button
                android:id="@+id/button_dot"
                style="@style/btnNumbers"
                android:text="@string/dot" />
        </LinearLayout>

        <!-- Column 4 -->
        <LinearLayout style="@style/layoutButtonGroup">
            <Button
                android:id="@+id/button_9"
                style="@style/btnNumbers"
                android:text="@string/nine" />

            <Button
                android:id="@+id/button_6"
                style="@style/btnNumbers"
                android:text="@string/six" />

            <Button
                android:id="@+id/button_3"
                style="@style/btnNumbers"
                android:text="@string/three" />

            <Button
                android:id="@+id/button_symbols"
                style="@style/btnNumbers"
                android:text="@string/plus_minus_symbol" />
        </LinearLayout>

        <!-- Column 5 -->
        <LinearLayout style="@style/layoutButtonGroup">
            <Button
                android:id="@+id/button_divide"
                style="@style/btnNumbers"
                android:background="@color/buttonBgControls"
                android:text="@string/devide_symbol" />

            <Button
                android:id="@+id/button_multiply"
                style="@style/btnNumbers"
                android:background="@color/buttonBgControls"
                android:text="@string/multiply_symbol" />

            <Button
                android:id="@+id/button_subtract"
                style="@style/btnNumbers"
                android:background="@color/buttonBgControls"
                android:text="@string/substract_symbol" />

            <Button
                android:id="@+id/button_sum"
                style="@style/btnNumbers"
                android:background="@color/buttonBgControls"
                android:text="@string/sum_symbol" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>